# paperloom

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/paperloom/: cli.py  extract_rules.py  io_utils.py  models.py  normalize.py  parse_pdf.py  pipeline.py
