[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperloom"
version = "0.5.1"
description = "Paperloom: PDF extraction (ZnO-focused) – Module 5.1 Enhanced"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["typer>=0.12", "PyPDF2>=3.0.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]

[project.scripts]
paperloom = "paperloom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
